Changelog
=========

1.6.dev0 - (unreleased)
-----------------------
* Feature: memcached domain for Cache_ldap set to localhost
  [alecghica refs #76251]

1.5 - (2016-08-17)
------------------
* Bug fix: Fix zope user roles
  [avoinea]

1.4 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

1.3 - (2016-02-15)
------------------
* Bug fix: Don't crash Plone instance on ConflictError
  [voineali refs #68160]

1.2 - (2015-05-15)
------------------
* Feature: Support read-only database
  [voineali refs #25160]

1.1 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

1.0 - (2014-10-15)
------------------
- Initial release
