@@ -3,7 +3,8 @@ Changelog
 
 1.6.dev0 - (unreleased)
 -----------------------
-* Feature: memcached domain for Cache_ldap set to localhost
+* Feature: memcached domain for set to localhost for
+  all "Memcached Manage" objects
   [alecghica refs #76251]
 
 1.5 - (2016-08-17)
